# modules-email

./: .gitignore  BUILD.gn  Makefile  README.md
agents/: BUILD.gn
agents/content_provider/: BUILD.gn  pubspec.yaml
agents/content_provider/lib/: main.dart
agents/content_provider/lib/src/: api.dart  content_provider_impl.dart  email_message.dart
agents/gmail/: BUILD.gn  Cargo.toml
agents/gmail/src/: main.rs
modules/: BUILD.gn
modules/composer/: BUILD.gn  README.md  component.json  pubspec.yaml
modules/composer/lib/: main.dart  models.dart  widgets.dart
modules/composer/lib/src/: screen.dart
modules/composer/lib/src/models/: composer_model.dart
modules/composer/lib/src/modular/: message_composer_impl.dart  module_model.dart  resolver_model.dart
modules/composer/lib/src/widgets/: close_icon.dart  delete_icon.dart  message_text_input.dart  recipient_input.dart  scaffold.dart  send_button.dart  send_icon.dart  subject_input.dart
modules/composer/test/: close_icon_test.dart  delete_icon_test.dart  message_text_input_test.dart  recipient_input_test.dart  scaffold_test.dart  send_button_test.dart  send_icon_test.dart  subject_input_test.dart
modules/nav/: BUILD.gn  nav_component.json  pubspec.yaml
modules/nav/lib/: main.dart
modules/nav/lib/src/: screen.dart
modules/nav/lib/src/modular/: module_model.dart
modules/session/: BUILD.gn  pubspec.yaml  session_component.json
modules/session/lib/: main.dart
modules/session/lib/src/: email_session_doc.dart  email_session_impl.dart  email_session_link_store.dart  email_session_module.dart
modules/story/: BUILD.gn  pubspec.yaml  story_component.json
modules/story/lib/: main.dart  modular_main.dart  quarterback.dart
modules/story/lib/src/: screen.dart
modules/story/lib/src/modular/: message_listener_impl.dart  module_model.dart  screen.dart
modules/thread/: BUILD.gn  pubspec.yaml  thread_component.json
modules/thread/lib/: main.dart
modules/thread/lib/src/: resolver_model.dart  screen.dart
modules/thread/lib/src/modular/: module_model.dart  resolver_model.dart
modules/thread_list/: BUILD.gn  pubspec.yaml  thread_list_component.json
modules/thread_list/lib/: main.dart
modules/thread_list/lib/src/: screen.dart
modules/thread_list/lib/src/modular/: module_model.dart
services/: BUILD.gn  email_session.fidl
services/email/: BUILD.gn  email_content_provider.fidl  email_session.fidl
services/messages/: BUILD.gn  message.fidl  message_composer.fidl
