# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("email") {
  deps = [
    "//apps/modules/email/agents",
    "//apps/modules/email/modules",
    "//apps/modules/email/services",
  ]
}

group("test") {
  testonly = true

  deps = [
    "//apps/modules/email/packages/email/test",
    "//apps/modules/common/packages/models/test",
    "//apps/modules/common/packages/util/test",
    "//apps/modules/common/packages/widgets/test",
  ]
}
