# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("email") {
  deps = [
    "//apps/modules/email/agents",
    "//apps/modules/email/modules",
    "//apps/modules/email/services",
  ]
}

group("test") {
  testonly = true

  deps = [
    "//apps/modules/email/packages/email_api:test",
    "//apps/modules/email/packages/email_models:test",
    "//apps/modules/email/packages/email_session:test",
    "//apps/modules/email/packages/email_widgets:test",
  ]
}
