# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("modules") {
  deps = [
    "nav",
    "nav:nav_component",
    "session",
    "session:session_component",
    "story",
    "story:story_component",
    "thread",
    "thread:thread_component",
    "thread_list",
    "thread_list:thread_list_component",
  ]
}
