# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("modules") {
  deps = [
    "nav",
    "nav:email_nav_component",
    "session",
    "session:email_session_component",
    "story",
    "story:email_story_component",
    "thread_list",
    "thread_list:email_thread_list_component",
    "thread",
    "thread:email_thread_component",
  ]
}
