# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/rust/rust_binary.gni")

rust_binary("gmail") {
  deps = [
    # "//application/lib/app/dart",
    "//application/services:services_rust_library",
    "//application/services:service_provider_rust_library",
    "//lib/fidl/rust/fidl",
    "//rust/magenta-rs:magenta",
    "//rust/magenta-rs/magenta-sys",
    "//rust/mxruntime",
    "//apps/maxwell/services/suggestion:suggestion_rust_library",
    "//apps/modular/services/agent:agent_rust_library",
    "//apps/modular/services/auth:auth_rust_library",
  ]
}
