# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/component/component.gni")
import("//flutter/build/flutter_app.gni")

flutter_app("composer") {
  main_dart = "lib/main.dart"

  deps = [
    "//application/lib/app/dart",
    "//application/services:services_dart",
    "//apps/modular/services/story:story_dart",
    "//apps/modules/email/packages/email_composer",
    "//apps/modules/email/packages/email_models",
    "//apps/modules/email/packages/email_widgets",
    "//apps/modules/email/services/messages:messages_dart",
    "//apps/modules/email/services/email:email_dart",
    "//apps/mozart/lib/flutter",
    "//apps/mozart/services/views:views_dart",
    "//lib/fidl/dart",
    "//lib/flutter/packages/flutter",
    "//lib/widgets/packages/logging:lib.logging",
    "//lib/widgets/packages/widgets:lib.widgets",
  ]

  analysis_options = "//apps/modules/common/.analysis_options"
}

fuchsia_component("composer_component") {
  manifest = "component.json"
  flutter_program = ":composer"
}
