# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/component/component.gni")
import("//flutter/build/flutter_app.gni")

# TODO(#SO-349): Use dart_app template since this module does not render UI.
flutter_app("session") {
  source_dir = "lib"
  main_dart = "lib/main.dart"

  deps = [
    "//application/lib/app/dart",
    "//application/services:services_dart",
    "//apps/modular/services/module:module_dart",
    "//apps/modular/services/story:story_dart",
    "//apps/modules/email/services:services_dart",
    "//apps/modules/email/packages/email_session",
    "//apps/mozart/lib/flutter",
    "//apps/mozart/services/views:views_dart",
    "//lib/fidl/dart",
    "//lib/widgets/packages/widgets:lib.widgets",
  ]

  analysis_options = "//apps/modules/common/.analysis_options"
}

fuchsia_component("session_component") {
  manifest = "session_component.json"
  flutter_program = ":session"
}
