# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//lib/fidl/fidl.gni")

# TODO(SO-390): Remove when services are refactored.
fidl("email") {
  sources = [
    "email_content_provider.fidl",
  ]
  deps = [
    "//apps/modules/email/services/messages",
  ]
}
